--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -9,22 +9,14 @@ build:
   os: ubuntu-22.04
   tools:
     python: "3.10"
-    # You can also specify other tool versions:
-    # nodejs: "19"
-    # rust: "1.64"
-    # golang: "1.19"
 
-# Build documentation in the "docs/" directory with Sphinx
+
+# Build documentation in the "SphinxDocs/" directory with Sphinx
 sphinx:
    configuration: SphinxDocs/conf.py
 
-# Optionally build your docs in additional formats such as PDF and ePub
-# formats:
-#    - pdf
-#    - epub
 
-# Optional but recommended, declare the Python requirements required
-# to build your documentation
+# Python requirements required to build your documentation
 # See https://docs.readthedocs.io/en/stable/guides/reproducible-builds.html
 python:
    install:
