--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,14 +4,8 @@ version = "v1.1.1"
 readme = "README.md"
 requires-python = ">=3.10"
 license = {file = "LICENSE.md"}
-authors = [
-  {name = "Thresa Kelly"}, 
-  {name = "Sree Kondi"},
-  {name = "Seth Gabbert"}
-]
-maintainers = [
-  {name = "Thresa Kelly"}
-]
+authors = [{name = "Thresa Kelly"}, {name = "Sree Kondi"},{name = "Seth Gabbert"}]
+maintainers = [{name = "Thresa Kelly"}]
 
 [tool.setuptools]
 package-dir = {"" = "Code/API_Modules"}
