--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,3 +16,8 @@ build-backend = "setuptools.build_meta"
 
 [project.urls]
 repository = "https://github.com/Pinnacle-Technology-Inc/Morelia"
+
+[tool.pytest.ini_options]
+addopts = [
+    "--import-mode=importlib",
+]
