--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,8 @@ version = "v1.6.1"
 readme = "README.md"
 requires-python = ">=3.10"
 license = {file = "LICENSE.md"}
-authors = [{name = "Thresa Kelly"}, {name = "Sree Kondi"}, {name = "James Hurd"}, {name = "Seth Gabbert"}, {name="Sam Groth"]
-maintainers = [{name = "James Hurd"}, {name = "Sam Groth"]
+authors = [{name = "Thresa Kelly"}, {name = "Sree Kondi"}, {name = "James Hurd"}, {name = "Seth Gabbert"}, {name="Sam Groth"}]
+maintainers = [{name = "James Hurd"}, {name = "Sam Groth"}]
 
 [tool.setuptools]
 package-dir = {"" = "Morelia"}
