--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,27 @@ requires-python = ">=3.10"
 license = {file = "LICENSE.md"}
 authors = [{name = "Thresa Kelly"}, {name = "Sree Kondi"}, {name = "James Hurd"}, {name = "Seth Gabbert"}, {name="Sam Groth"}]
 maintainers = [{name = "James Hurd"}, {name = "Sam Groth"}]
+dependencies = [
+  "numpy",
+  "pandas",
+  "pyEDFlib",
+  "pyserial",
+  "texttable",
+  "influxdb-client",
+  "reactivex",
+  "cppyy",
+]
+
+[project.optional-dependencies]
+docs = [
+  "sphinx",
+  "autodoc",
+  "sphinx-rtd-theme",
+]
+
+tests = [
+  "pytest",
+]
 
 [tool.setuptools]
 package-dir = {"" = "src"}
