--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   build-publish-docs:
     name: Build documentation.
-    runs-on: unbuntu-latest
+    runs-on: ubuntu-latest
     permissions:
       contents: write
     steps:
