--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -13,7 +13,7 @@ jobs:
       contents: write
     steps:
       - uses: actions/checkout@v4
-      - uses: ammaraskar/sphinx-action@master
+      - uses: ammaraskar/sphinx-action@7.0.0
       - uses: actions/upload-artifact@v4
         with:
           name: html-docs
